deprecated/kubernetes-bare-metal/backup/rendered/jellyfin.yaml
---
# Source: app-template/templates/common.yaml
---
# Source: app-template/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/service: jellyfin
    helm.sh/chart: app-template-4.5.0
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
---
# Source: app-template/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyfin
    helm.sh/chart: app-template-4.5.0
  namespace: media
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: jellyfin
      app.kubernetes.io/instance: jellyfin
  template:
    metadata:
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/name: jellyfin
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      dnsConfig: 
        options:
        - name: single-request-reopen
        - name: ndots
          value: "1"
        - name: timeout
          value: "1"
        - name: attempts
          value: "2"
      nodeSelector: 
        kubernetes.io/hostname: mbp13-2015
      containers: 
        - env:
          - name: PGID
            value: "1000"
          - name: PUID
            value: "1000"
          - name: TZ
            value: Europe/London
          image: linuxserver/jellyfin:latest
          name: main
          volumeMounts:
          - mountPath: /cache
            name: cache
          - mountPath: /config
            name: config
          - mountPath: /movie
            name: movie
            readOnly: true
          - mountPath: /tv
            name: tv
            readOnly: true
      volumes: 
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - hostPath:
            path: /mnt/media/movie
          name: movie
        - hostPath:
            path: /mnt/media/tv
          name: tv
