deprecated/kubernetes-bare-metal/backup/rendered/radarr.yaml
---
# Source: app-template/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr
    app.kubernetes.io/service: radarr
    helm.sh/chart: app-template-4.5.0
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
---
# Source: app-template/templates/common.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr
    helm.sh/chart: app-template-4.5.0
  namespace: media
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: radarr
      app.kubernetes.io/instance: radarr
  template:
    metadata:
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/name: radarr
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      securityContext: 
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      dnsConfig: 
        options:
        - name: single-request-reopen
        - name: ndots
          value: "1"
        - name: timeout
          value: "1"
        - name: attempts
          value: "2"
      nodeSelector: 
        media-storage: "true"
      containers: 
        - env:
          - name: PGID
            value: "1000"
          - name: PUID
            value: "1000"
          - name: TZ
            value: Europe/London
          image: linuxserver/radarr:latest
          name: main
          volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
          - mountPath: /movie
            name: movie
      volumes: 
        - hostPath:
            path: /mnt/media/appdata/radarr
          name: config
        - hostPath:
            path: /mnt/media/downloads
          name: downloads
        - hostPath:
            path: /mnt/media/movie
          name: movie
