deprecated/kubernetes-bare-metal/backup/rendered/sonarr.yaml
---
# Source: app-template/templates/common.yaml
---
# Source: app-template/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/service: sonarr
    helm.sh/chart: app-template-4.5.0
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr
---
# Source: app-template/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sonarr
    helm.sh/chart: app-template-4.5.0
  namespace: media
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: sonarr
      app.kubernetes.io/instance: sonarr
  template:
    metadata:
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: sonarr
        app.kubernetes.io/name: sonarr
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      securityContext: 
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      dnsConfig: 
        options:
        - name: single-request-reopen
        - name: ndots
          value: "1"
        - name: timeout
          value: "1"
        - name: attempts
          value: "2"
      containers: 
        - env:
          - name: PGID
            value: "1000"
          - name: PUID
            value: "1000"
          - name: TZ
            value: Europe/London
          image: linuxserver/sonarr:latest
          name: main
          volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
          - mountPath: /tv
            name: tv
      volumes: 
        - name: config
          persistentVolumeClaim:
            claimName: sonarr
        - hostPath:
            path: /mnt/media/downloads
          name: downloads
        - hostPath:
            path: /mnt/media/tv
          name: tv
