deprecated/kubernetes-bare-metal/backup/rendered/qbittorrent-vpn.yaml
---
# Source: app-template/templates/common.yaml
---
# Source: app-template/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-vpn-bittorrent
  labels:
    app.kubernetes.io/instance: qbittorrent-vpn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent-vpn
    app.kubernetes.io/service: qbittorrent-vpn-bittorrent
    helm.sh/chart: app-template-4.5.0
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 6881
      targetPort: 6881
      protocol: TCP
      name: bt-tcp
    - port: 6881
      targetPort: 6881
      protocol: UDP
      name: bt-udp
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: qbittorrent-vpn
    app.kubernetes.io/name: qbittorrent-vpn
---
# Source: app-template/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-vpn-main
  labels:
    app.kubernetes.io/instance: qbittorrent-vpn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent-vpn
    app.kubernetes.io/service: qbittorrent-vpn-main
    helm.sh/chart: app-template-4.5.0
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: qbittorrent-vpn
    app.kubernetes.io/name: qbittorrent-vpn
---
# Source: app-template/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-vpn
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: qbittorrent-vpn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent-vpn
    helm.sh/chart: app-template-4.5.0
  namespace: media
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: qbittorrent-vpn
      app.kubernetes.io/instance: qbittorrent-vpn
  template:
    metadata:
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: qbittorrent-vpn
        app.kubernetes.io/name: qbittorrent-vpn
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      dnsConfig: 
        options:
        - name: single-request-reopen
        - name: ndots
          value: "1"
        - name: timeout
          value: "1"
        - name: attempts
          value: "2"
      nodeSelector: 
        kubernetes.io/hostname: mbp13-2015
      containers: 
        - env:
          - name: FIREWALL_INPUT_PORTS
            value: 8080,6881
          - name: FIREWALL_OUTBOUND_SUBNETS
            value: 192.168.0.0/16,10.0.0.0/8
          - name: FIREWALL_VPN_INPUT_PORTS
            value: "6881"
          - name: HTTP_CONTROL_SERVER_ADDRESS
            value: :8000
          - name: SERVER_COUNTRIES
            value: UK
          - name: TZ
            value: Europe/London
          - name: VPN_SERVICE_PROVIDER
            value: mullvad
          - name: VPN_TYPE
            value: wireguard
          image: qmcgaw/gluetun:latest
          name: gluetun
          securityContext:
            capabilities:
              add:
              - NET_ADMIN
          volumeMounts:
          - mountPath: /downloads
            name: downloads
          - mountPath: /dev/net/tun
            name: tun
        - env:
          - name: PGID
            value: "1000"
          - name: PUID
            value: "1000"
          - name: TZ
            value: Europe/London
          - name: WEBUI_PORT
            value: "8080"
          image: linuxserver/qbittorrent:latest
          name: qbittorrent
          volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
      volumes: 
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-vpn
        - hostPath:
            path: /mnt/media/downloads
          name: downloads
        - hostPath:
            path: /dev/net/tun
            type: CharDevice
          name: tun
---
# Source: app-template/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-vpn
  labels:
    app.kubernetes.io/instance: qbittorrent-vpn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent-vpn
    helm.sh/chart: app-template-4.5.0
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: "qbittorrent.lan"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: qbittorrent-vpn-main
                port:
                  number: 8080
